메인 애니메이션 수정 및 서브페이지 수정
메인 컬쳐랩부분 애니메이션 수정 및 서브페이지 헤더 부분 수정

--- a/bean.html
+++ b/bean.html
@@ -349,77 +349,85 @@
     <div id="wrap">
         <header id="header">
             <!-- TOPMENU -->
-            <ul class="topmenu">
-                <div class="top_left">
-                    <li><a href="#">브랜드 사이트</a></li>
-                    <li><a href="#">기업 사이트</a></li>
-                </div>
-                <div class="top_right">
-                    <li><a href="#">로그인</a></li>
-                    <li><a href="#">회원가입</a></li>
-                    <li><a href="map.html">매장찾기</a></li>
-                    <li><a href="#"><img src="img/top_sns01.gif" alt="blog"></a></li>
-                    <li><a href="#"><img src="img/top_sns02.gif" alt="instagram"></a></li>
-                    <li><a href="#"><img src="img/top_sns03.gif" alt="facebook"></a></li>
-                    <li><a href="#"><img src="img/top_sns04.gif" alt="youtube"></a></li>
-                    <li>
-                        <select name="language" id="">
-                            <option value="korean">Korean</option>
-                            <option value="korean">English</option>
-                            <option value="korean">Chinese</option>
-                        </select>
-                    </li>
-                </div>
+            <ul class="top_left">
+                <li><a href="#">브랜드 사이트</a></li>
+                <li><a href="#">기업 사이트</a></li>
             </ul>
-            <div class="nav">
-                <h1 class="screen_out">메인 로고</h1>
-                <div class="logo"><a href="index.html"> <img src="img/top_logo.gif" alt="logo"></a></div>
-                <!-- GNB MENU -->
-                <ul class="gnb">
-                    <h2 class="screen_out">이디야 메인 메뉴</h2>
-                    <li class="menu_title"><a href="#"><span>메뉴</span></a>
-                        <ul>
-                            <li><a href="#">음료</a></li>
-                            <li><a href="bakery.html">베이커리</a></li>
-                            <li><a href="#">이디야 스낵</a></li>
-                            <li><a href="#">MD</a></li>
-                            <li><a href="#">비니스트</a></li>
-                            <li><a href="bean.html">원두</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
-                        <ul>
-                            <li><a href="#">멤버스 소개</a></li>
-                            <li><a href="#">이디야카드</a></li>
-                            <li><a href="#">선물하기</a></li>
-                            <li><a href="#">이디야오더</a></li>
-                            <li><a href="#">FAQ</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
-                        <ul>
-                            <li><a href="#">이디야커피랩</a></li>
-                            <li><a href="#">이디야커피랩 메뉴</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
-                        <ul>
-                            <li><a href="musicfesta.html">뮤직페스타</a></li>
-                            <li><a href="#">프로그램 및 시설 안내</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
-                        <ul>
-                            <li><a href="#">공지사항</a></li>
-                            <li><a href="#">이벤트</a></li>
-                        </ul>
-                    </li>
-                </ul>
+            <h1 class="screen_out">메인 로고</h1>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/top_logo.gif" alt="logo">
+                </a>
+            </div>
+            <div class="top_wrap selTo">
+                <a href="#" class="close_btn selTo"></a>
+                <a href="#" class="toggle_btn selTo"></a>
+                <div class="top_right selTo">
+                    <ul>
+                        <li><a href="#">로그인</a></li>
+                        <li><a href="#">회원가입</a></li>
+                        <li><a href="map.html" class="toggle_store">매장찾기</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li>
+                            <select name="language" id="">
+                                <option value="korean">Korean</option>
+                                <option value="korean">English</option>
+                                <option value="korean">Chinese</option>
+                            </select>
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav selTo">
+                    <!-- GNB MENU -->
+                    <ul class="gnb selTo">
+                        <h2 class="screen_out">이디야 메인 메뉴</h2>
+                        <li class="menu_title"><a href="#"><span>메뉴</span></a>
+                            <ul>
+                                <li><a href="#">음료</a></li>
+                                <li><a href="bakery.html">베이커리</a></li>
+                                <li><a href="#">이디야 스낵</a></li>
+                                <li><a href="#">MD</a></li>
+                                <li><a href="#">비니스트</a></li>
+                                <li><a href="bean.html">원두</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
+                            <ul>
+                                <li><a href="#">멤버스 소개</a></li>
+                                <li><a href="#">이디야카드</a></li>
+                                <li><a href="#">선물하기</a></li>
+                                <li><a href="#">이디야오더</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
+                            <ul>
+                                <li><a href="#">이디야커피랩</a></li>
+                                <li><a href="#">이디야커피랩 메뉴</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
+                            <ul>
+                                <li><a href="musicfesta.html">뮤직페스타</a></li>
+                                <li><a href="#">프로그램 및 시설 안내</a></li>
+                            </ul>
+                        </li>
+                        <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
+                            <ul>
+                                <li><a href="#">공지사항</a></li>
+                                <li><a href="#">이벤트</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </header>
-
-        <!--  C O N T E N T  -->
-        
+        <!--  C O N T E N T  -->      
         <content id="container">
             <div class="main_img">
                 <h2>이디야 원두</h2>
